General part xml files & some drawables

--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -115,7 +115,7 @@
         android:layout_width="330dp"
         android:layout_height="57dp"
         android:layout_marginEnd="36dp"
-        android:background="@drawable/box"
+        android:background="@drawable/radiusbox"
         android:backgroundTint="#ECECEC"
         android:ems="10"
         android:hint="e.g abc123@gmail.com"
@@ -128,7 +128,7 @@
         android:layout_width="330dp"
         android:layout_height="57dp"
         android:layout_marginEnd="36dp"
-        android:background="@drawable/box"
+        android:background="@drawable/radiusbox"
         android:backgroundTint="#ECECEC"
         android:ems="10"
         android:hint="e.g John Shawn"
@@ -141,7 +141,7 @@
         android:layout_width="330dp"
         android:layout_height="57dp"
         android:layout_marginEnd="36dp"
-        android:background="@drawable/box"
+        android:background="@drawable/radiusbox"
         android:backgroundTint="#ECECEC"
         android:ems="10"
         android:hint="Enter your password"
@@ -154,7 +154,7 @@
         android:layout_width="330dp"
         android:layout_height="57dp"
         android:layout_marginEnd="40dp"
-        android:background="@drawable/box"
+        android:background="@drawable/radiusbox"
         android:backgroundTint="#ECECEC"
         android:ems="10"
         android:hint="Enter your password again"
@@ -178,25 +178,25 @@
         android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="128dp"
-        android:layout_marginBottom="40dp"
+        android:layout_marginStart="112dp"
+        android:layout_marginTop="24dp"
         android:text="Already a user?"
         android:textColor="#000000"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/signUpBtn" />
 
     <Button
         android:id="@+id/loginBtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="80dp"
-        android:layout_marginBottom="28dp"
+        android:layout_marginStart="5dp"
+        android:layout_marginTop="8dp"
         android:backgroundTint="#FFFFFF"
         android:shadowColor="#FFFFFF"
         android:text="LOGIN"
         android:textColor="#000000"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintStart_toEndOf="@+id/textView2"
+        app:layout_constraintTop_toBottomOf="@+id/signUpBtn" />
 
     <ImageView
         android:id="@+id/imageView5"
