--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -8,148 +8,154 @@
 
     <TextView
         android:id="@+id/showEmail"
-        android:layout_width="696dp"
-        android:layout_height="128dp"
-        android:layout_marginTop="40dp"
-        android:layout_marginEnd="72dp"
+        android:layout_width="309dp"
+        android:layout_height="67dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginEnd="20dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/showPhoneNum" />
 
     <TextView
         android:id="@+id/showPhoneNum"
-        android:layout_width="696dp"
-        android:layout_height="128dp"
-        android:layout_marginTop="40dp"
-        android:layout_marginEnd="72dp"
+        android:layout_width="309dp"
+        android:layout_height="67dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginEnd="20dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/showBD" />
 
     <ImageView
         android:id="@+id/imageView16"
-        android:layout_width="966dp"
-        android:layout_height="500dp"
-        android:layout_marginTop="92dp"
+        android:layout_width="415dp"
+        android:layout_height="210dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/imageView17"
         app:srcCompat="@drawable/purplebox" />
 
     <ImageView
         android:id="@+id/imageView18"
-        android:layout_width="966dp"
-        android:layout_height="20dp"
+        android:layout_width="415dp"
+        android:layout_height="8dp"
+        android:layout_marginTop="10dp"
         app:layout_constraintBottom_toTopOf="@+id/imageView17"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.25"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/whitebox" />
 
     <ImageView
         android:id="@+id/imageView17"
-        android:layout_width="966dp"
-        android:layout_height="39dp"
-        android:layout_marginTop="52dp"
+        android:layout_width="415dp"
+        android:layout_height="13dp"
+        app:layout_constraintBottom_toTopOf="@+id/imageView16"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imageView18"
         app:srcCompat="@drawable/greybox" />
 
     <ImageView
         android:id="@+id/imageView19"
-        android:layout_width="966dp"
-        android:layout_height="39dp"
+        android:layout_width="415dp"
+        android:layout_height="13dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView16"
         app:srcCompat="@drawable/greybox" />
 
     <ImageView
         android:id="@+id/imageView20"
-        android:layout_width="966dp"
-        android:layout_height="20dp"
+        android:layout_width="415dp"
+        android:layout_height="8dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView19"
         app:srcCompat="@drawable/whitebox" />
 
     <ImageView
-        android:id="@+id/imageView21"
-        android:layout_width="962dp"
-        android:layout_height="479dp"
-        android:layout_marginTop="112dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/profile_pic" />
-
-    <ImageView
         android:id="@+id/imageView23"
-        android:layout_width="65dp"
-        android:layout_height="85dp"
-        android:layout_marginTop="40dp"
-        android:layout_marginEnd="28dp"
+        android:layout_width="25dp"
+        android:layout_height="40dp"
+        android:layout_marginTop="24dp"
+        android:layout_marginEnd="16dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="@+id/imageView16"
         app:srcCompat="@drawable/image_2" />
 
     <TextView
         android:id="@+id/showName"
-        android:layout_width="696dp"
-        android:layout_height="128dp"
-        android:layout_marginTop="88dp"
-        android:layout_marginEnd="72dp"
+        android:layout_width="309dp"
+        android:layout_height="67dp"
+        android:layout_marginTop="24dp"
+        android:layout_marginEnd="20dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView20" />
 
     <TextView
         android:id="@+id/showBD"
-        android:layout_width="696dp"
-        android:layout_height="128dp"
-        android:layout_marginTop="40dp"
-        android:layout_marginEnd="72dp"
+        android:layout_width="309dp"
+        android:layout_height="67dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginEnd="20dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/showName" />
 
     <ImageView
         android:id="@+id/imageView24"
-        android:layout_width="149dp"
-        android:layout_height="139dp"
-        android:layout_marginTop="100dp"
+        android:layout_width="71dp"
+        android:layout_height="65dp"
+        android:layout_marginTop="32dp"
         app:layout_constraintEnd_toStartOf="@+id/showName"
         app:layout_constraintTop_toBottomOf="@+id/imageView19"
         app:srcCompat="@drawable/illustration_car_wash_flyer__27__1" />
 
     <ImageView
         android:id="@+id/imageView27"
-        android:layout_width="149dp"
-        android:layout_height="139dp"
-        android:layout_marginTop="28dp"
+        android:layout_width="71dp"
+        android:layout_height="65dp"
+        android:layout_marginTop="20dp"
         app:layout_constraintEnd_toStartOf="@+id/showBD"
         app:layout_constraintTop_toBottomOf="@+id/showName"
         app:srcCompat="@drawable/calendar" />
 
     <ImageView
         android:id="@+id/imageView28"
-        android:layout_width="149dp"
-        android:layout_height="139dp"
-        android:layout_marginTop="28dp"
+        android:layout_width="71dp"
+        android:layout_height="65dp"
+        android:layout_marginTop="20dp"
         app:layout_constraintEnd_toStartOf="@+id/showPhoneNum"
         app:layout_constraintTop_toBottomOf="@+id/showBD"
         app:srcCompat="@drawable/phone" />
 
     <ImageView
         android:id="@+id/imageView29"
-        android:layout_width="149dp"
-        android:layout_height="139dp"
-        android:layout_marginTop="28dp"
+        android:layout_width="71dp"
+        android:layout_height="65dp"
+        android:layout_marginTop="20dp"
         app:layout_constraintEnd_toStartOf="@+id/showEmail"
         app:layout_constraintTop_toBottomOf="@+id/showPhoneNum"
         app:srcCompat="@drawable/mail" />
 
     <Button
         android:id="@+id/saveBtn"
-        android:layout_width="291dp"
-        android:layout_height="110dp"
-        android:layout_marginTop="60dp"
-        android:layout_marginEnd="320dp"
+        android:layout_width="127dp"
+        android:layout_height="54dp"
+        android:layout_marginTop="36dp"
+        android:layout_marginEnd="140dp"
         android:backgroundTint="#9999E4"
         android:text="edit profile"
-        android:textSize="34sp"
+        android:textSize="14sp"
         app:cornerRadius="50dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/showEmail" />
+
+    <ImageView
+        android:id="@+id/imageView21"
+        android:layout_width="197dp"
+        android:layout_height="156dp"
+        app:layout_constraintBottom_toTopOf="@+id/imageView19"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/imageView16"
+        app:layout_constraintVertical_bias="0.592"
+        app:srcCompat="@drawable/profile_pic" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
