--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -31,28 +31,8 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/emailInput" />
 
-    <ImageView
-        android:id="@+id/imageView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="4dp"
-        android:layout_marginEnd="168dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/smoke" />
-
-    <ImageView
-        android:id="@+id/imageView2"
-        android:layout_width="57dp"
-        android:layout_height="68dp"
-        android:layout_marginTop="12dp"
-        android:layout_marginEnd="148dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/smoke" />
-
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/CB_food"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="64dp"
@@ -64,38 +44,17 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <ImageView
-        android:id="@+id/imageView3"
-        android:layout_width="273dp"
-        android:layout_height="78dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="56dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView"
-        app:srcCompat="@drawable/veggies" />
-
-    <ImageView
-        android:id="@+id/imageView4"
-        android:layout_width="309dp"
-        android:layout_height="290dp"
-        android:layout_marginTop="220dp"
-        android:layout_marginEnd="48dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/spatula" />
-
     <TextView
         android:id="@+id/emailtext"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
         android:layout_marginEnd="320dp"
         android:text="Email"
         android:textColor="#000000"
         android:textColorHint="#FFFFFF"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView3" />
+        tools:layout_editor_absoluteY="220dp" />
 
     <TextView
         android:id="@+id/emailtext2"
@@ -175,7 +134,7 @@
         app:layout_constraintTop_toBottomOf="@+id/pwdInput2" />
 
     <TextView
-        android:id="@+id/textView2"
+        android:id="@+id/CB_cuis"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="112dp"
@@ -195,18 +154,7 @@
         android:shadowColor="#FFFFFF"
         android:text="LOGIN"
         android:textColor="#000000"
-        app:layout_constraintStart_toEndOf="@+id/textView2"
+        app:layout_constraintStart_toEndOf="@+id/CB_cuis"
         app:layout_constraintTop_toBottomOf="@+id/signUpBtn" />
-
-    <ImageView
-        android:id="@+id/imageView5"
-        android:layout_width="416dp"
-        android:layout_height="378dp"
-        android:layout_marginEnd="4dp"
-        android:layout_marginBottom="56dp"
-        android:elevation="-5dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:srcCompat="@drawable/sparkle" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
