--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -6,18 +6,6 @@
     android:layout_height="match_parent"
     android:background="#FFFFFF">
 
-    <ImageView
-        android:id="@+id/imageView11"
-        android:layout_width="416dp"
-        android:layout_height="378dp"
-        android:layout_marginTop="316dp"
-        android:layout_marginEnd="8dp"
-        android:elevation="-5dp"
-        android:scaleX="-1"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/sparkle" />
-
     <Button
         android:id="@+id/signUpBtn1"
         android:layout_width="wrap_content"
@@ -87,65 +75,13 @@
         android:id="@+id/emailtext4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
         android:layout_marginEnd="308dp"
         android:text="Email"
         android:textColor="#000000"
         android:textColorHint="#FFFFFF"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView8" />
-
-    <ImageView
-        android:id="@+id/imageView10"
-        android:layout_width="309dp"
-        android:layout_height="290dp"
-        android:layout_marginTop="220dp"
-        android:layout_marginEnd="48dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/spatula" />
-
-    <ImageView
-        android:id="@+id/imageView9"
-        android:layout_width="416dp"
-        android:layout_height="378dp"
-        android:layout_marginEnd="4dp"
-        android:layout_marginBottom="464dp"
-        android:elevation="-5dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:srcCompat="@drawable/sparkle" />
-
-    <ImageView
-        android:id="@+id/imageView8"
-        android:layout_width="273dp"
-        android:layout_height="78dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="68dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView4"
-        app:srcCompat="@drawable/veggies" />
-
-    <ImageView
-        android:id="@+id/imageView7"
-        android:layout_width="57dp"
-        android:layout_height="68dp"
-        android:layout_marginTop="12dp"
-        android:layout_marginEnd="148dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/smoke" />
-
-    <ImageView
-        android:id="@+id/imageView6"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="4dp"
-        android:layout_marginEnd="168dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/smoke" />
+        tools:layout_editor_absoluteY="232dp" />
 
     <TextView
         android:id="@+id/textView4"
@@ -172,12 +108,4 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/pwdInput3" />
 
-    <ImageView
-        android:id="@+id/imageView12"
-        android:layout_width="278dp"
-        android:layout_height="208dp"
-        android:layout_marginEnd="68dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:srcCompat="@drawable/pot" />
 </androidx.constraintlayout.widget.ConstraintLayout>
