--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -5,6 +5,16 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <ImageView
+        android:id="@+id/imageView6"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="51dp"
+        android:layout_marginEnd="82dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/veggies" />
+
     <TextView
         android:id="@+id/emailtext3"
         android:layout_width="wrap_content"
@@ -35,7 +45,7 @@
         android:id="@+id/CB_food"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="64dp"
+        android:layout_marginTop="116dp"
         android:layout_marginEnd="124dp"
         android:fontFamily="@font/moulfamily"
         android:text="Sign Up"
@@ -157,5 +167,15 @@
         android:textColor="#000000"
         app:layout_constraintStart_toEndOf="@+id/CB_cuis"
         app:layout_constraintTop_toBottomOf="@+id/signUpBtn" />
+
+    <ImageView
+        android:id="@+id/imageView5"
+        android:layout_width="397dp"
+        android:layout_height="305dp"
+        android:layout_marginEnd="4dp"
+        android:elevation="-5dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:srcCompat="@drawable/spatula"
+        tools:layout_editor_absoluteY="213dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
